// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly in mode desktop 1`] = `
<div
  className="container"
>
  NavBarItemDesktop
</div>
`;

exports[`should render correctly in mode mobile 1`] = `
<div
  className="container"
>
  NavBarItemTablet
</div>
`;
